Bug 1189837 - Subtract scrollbars in LD pixels rather than CSS pixels. r=mstange